# elevant

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  add_benchmark.py  analyse_entity_description_coverage.py  analyse_link_frequencies.py  analyze_all_benchmarks.sh  analyze_benchmark_entity_types.py  annotate_and_add_benchmark.py  annotate_benchmark_labels.py  api_linker.py  conll_output.py  coreference_resolution.py  count_unigrams.py  create_abstracts_mapping.py  create_all_types_mapping.py  create_benchmark.py  create_benchmark_labels.py  create_coreference_types_mapping.py  create_databases.py  create_entity_word_vectors.py  create_entity_word_vectors_from_extracted_abstracts.py  create_knowledge_base.py  create_knowledge_base_wikipedia.py  create_qlever_text_files.py  create_relevant_types_mapping.py  evaluate.py  evaluate_all.sh  evaluate_coreference_linker.py  evaluate_linked_entities.py  evaluate_linking_results.py  explosion_linker_test.py  extract_abstracts.py  extract_akronyms.py  extract_custom_mappings.py  extract_redirects.py  extract_title_synonyms.py  extract_wikinews_category_wikipedia_mapping.py  (+46 more)
benchmark/: our_benchmark_annotations.jsonl  our_benchmark_annotations.txt  whitelist.txt
benchmark-webapp/: README.md  code.js  index.html  style.css
benchmarks-arxiv2023/: aida-conll-test.benchmark.jsonl  aida-conll-test.metadata.json  msnbc-updated.benchmark.jsonl  news-fair-no-coref.benchmark.jsonl  news-fair-no-coref.metadata.json  wiki-fair-no-coref.metadata.json
benchmarks-diss-wiki/: wiki-fair-v2-test-no-coref.benchmark.jsonl  (+4 more)
(+2561 files in other folders)
